// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test on GifExpertApp should show a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Alien"
      key="Alien"
    />
    <GifGrid
      category="Saitama"
      key="Saitama"
    />
  </ol>
</Fragment>
`;

exports[`test on GifExpertApp should show correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
